# contactseg

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: python-testing.yml
atlas_test/config/: snakebids.yml
contactseg/: pipeline_description.json  run.py  tasks.py
contactseg/config/: snakebids.yml
contactseg/workflow/: Snakefile
contactseg/workflow/envs/: analysis.yaml  image_processing.yaml  nnunet.yaml  templateflow.yaml
contactseg/workflow/lib/: utils_tf.py
contactseg/workflow/profiles/default/: config.yaml
contactseg/workflow/rules/: common.smk  coords.smk  nnunet.smk  postprocessing.smk  preprocessing.smk  templateflow.smk
contactseg/workflow/scripts/: affine.py  apply_full_transformation.py  apply_registration.py  contacts_qc.py  generate_tsv.py  label.py  lookup_atlas_labels.py  nnUNet_coords.py  nonlinear_registration.py  registration.py  template_flow.py  transform_atlas_to_t1.py  warp_mni_to_t1
docs/: conf.py  index.md
docs/getting_started/: installation.md
docs/outputs/: outputs.md
docs/usage/: cli.md
nnunet_contact_seg/: run.py  tasks.py
nnunet_contact_seg/workflow/rules/: postprocessing.smk
nnunet_contact_seg/workflow/scripts/: apply_contact_registration.py  contacts_qc.py  label_map.py  registration.py
resources/atlases/: tpl-MNI152NLin2009cSym_atlas-CerebA_dseg.tsv
tests/data/sub-P167/: sub-P167_run-01_planned.fcsv  sub-P167_run-01_xfm.txt
tests/data/sub-P167/ses-post/ct/: sub-P167_ses-post_acq-Electrode_run-01_ct.json
tests/data/sub-P167/ses-pre/: sub-P167_ses-pre_scans.tsv
tests/data/sub-P167/ses-pre/anat/: sub-P167_ses-pre_run-01_FLAIR.json  sub-P167_ses-pre_run-01_T1w.json  sub-P167_ses-pre_run-02_T1w.json
tests/data/sub-P167/ses-pre/pet/: sub-P167_ses-pre_task-rest_run-01_pet.json
