[project]
name = "contactseg"
version = "0.1.0"
description = "Automatic contact segmentation BIDS app"
readme = "README.md"
license = "MIT"
authors = [{ name = "Arun Thurairajah", email = "a.thurairajah1@gmail.com" }]
requires-python = ">=3.10,<4.0"
dependencies = [
    "snakebids==0.14.0",
    "appdirs>=1.4.4",
    "pulp<2.8.0; python_version<'3.11'",
    "pyvista>=0.44.2",
]

[project.optional-dependencies]
dev = [
    "flake8>=4.0.1",
    "pytest-console-scripts>=1.2.1",
    "pytest>=6.2.5",
    "black>=24.0.0",
    "pylint>=2.11.1",
    "isort>=5.10.1",
    "poethepoet>=0.10.0",
    "snakefmt>=0.10.0",
    "pygraphviz==1.7",
    "Jinja2>=3.0.3"
]

[project.scripts]
contactseg = "contactseg.run:app.run"
quality-check = "contactseg.tasks:quality_check"
quality-fix   = "contactseg.tasks:quality_fix"

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
