[project]
name = "contactseg"
version = "0.1.0"
description = "Automatic contact segmentation BIDS app"
readme = "README.md"
license = "MIT"
authors = [{ name = "Arun Thurairajah", email = "a.thurairajah1@gmail.com" }]
requires-python = ">=3.10,<4.0"
dependencies = []

[project.scripts]
contactseg = "contactseg.run:app.run"
quality-check = "contactseg.tasks:quality_check"
quality-fix   = "contactseg.tasks:quality_fix"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]

[tool.setuptools.packages.find]
where = ["."]




[tool.pixi.pypi-dependencies]
contactseg = { path = ".", editable = true }

[tool.pixi.environments.default]
features = ["runtime"]

[tool.pixi.environments.dev]
features = ["runtime", "dev"]

[tool.pixi.environments.dev-only]
features = ["dev"]

[tool.pixi.feature.runtime.dependencies]
python = ">=3.10,<4.0"
snakebids = "==0.14.0"
appdirs = ">=1.4.4"
pulp = "<2.8.0"
pyvista = ">=0.44.2"

[tool.pixi.feature.dev.dependencies]
flake8 = ">=4.0.1"
pytest-console-scripts = ">=1.2.1"
pytest = ">=6.2.5"
black = ">=24.0.0"
pylint = ">=2.11.1"
isort = ">=5.10.1"
poethepoet = ">=0.10.0"
snakefmt = ">=0.10.0"
pygraphviz = "==1.7"
Jinja2 = ">=3.0.3"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.snakefmt]
line_length = 79
include = '\.smk$|^Snakefile'

[tool.pixi.tasks]
quality_check = "isort contactseg/*.py -c && black contactseg --check && snakefmt contactseg --check"
quality_fix = "isort contactseg/*.py && black contactseg && snakefmt contactseg"
